--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
 
@@ -25,7 +27,9 @@
         <suiteXmlFiles>
           <!-- TestNG suite XML files -->
           <!--suppress UnresolvedMavenProperty -->
-          <suiteXmlFile>testng.xml</suiteXmlFile>
+          <suiteXmlFile>
+            testng.xml
+          </suiteXmlFile>
           <!--<suiteXmlFile>testngSFDC.xml</suiteXmlFile>-->
         </suiteXmlFiles>
         </configuration>
@@ -54,20 +58,20 @@
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
-      <version>5.3.1</version>
+      <version>3.4.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.6.0</version>
+      <version>3.141.59</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>7.6.1</version>
+      <version>6.7</version>
     </dependency>
 
     <dependency>
